# libavpp

./: CMakeLists.txt  README.md
include/avpp/: context.h  dictionary.h  formatcontext.h
src/: CMakeLists.txt  avpp_global.h.in  context.cpp  context_p.h  dictionary.cpp  dictionary_p.h  formatcontext.cpp  formatcontext_p.h
